# Tesis_Maestria

./: .gitignore  CLAUDE.md  Propuesta_nueva.md  Propuesta_nueva_pre.md  README.md  planteamiento.md
Bitacora/: 01-04-2026.md  02-04-2026.md  03-04-2026.md  04-04-2026.md  05-04-2026.md  29-03-2026.md  30-03-2026.md  31-03-2026.md
context/: context.md
data/: data.md  prueba_web.py
data/docker/ros1_docker/: Dockerfile  docker-compose.yml
data/docker/ros1_workspace/src/mobile_manipulator_unal_description/: CMakeLists.txt  package.xml
data/docker/ros1_workspace/src/mobile_manipulator_unal_description/config/: ekf_config.yaml
data/docker/ros1_workspace/src/mobile_manipulator_unal_description/launch/: drl_launch.launch  gazebo_only.launch  gazebo_view.launch  general_launch.launch  robot_spawn.launch
data/docker/ros1_workspace/src/mobile_manipulator_unal_description/scripts/: init_goal_publisher.py
data_legacy/src/mob_manipulator_controller/launch/: osc_controller.launch
data_legacy/src/mob_manipulator_controller/src/: Stack_Tasks.cpp
data_legacy/src/mobile_robot_unal_description/: CMakeLists.txt
data_legacy/src/mobile_robot_unal_description/src/: gazebo_to_ekf.cpp  world_odom_corrector.cpp
data_legacy/src/mobile_robot_unal_description/worlds/: training_world.world
models/drl/best/dqn/: evaluations.npz
models/drl/best/ppo/: evaluations.npz
models/drl/best/ppo_cont/: evaluations.npz
models/drl/best/sac_cont/: evaluations.npz
models/drl_agent2/best/dqn/: evaluations.npz
modules/: requirements.txt  test_pipeline.py  test_pybullet_setup.py
modules/drl/: __init__.py  callbacks.py  config.py  continuous_env.py  demo.py  evaluate.py  mobile_manipulator_env.py  pybullet_sensor_utils.py  sensor_utils.py  train.py
modules/drl_agent2/: __init__.py  arm_env.py  config.py  demo.py  evaluate.py  train.py
modules/goal_builder/: goal_builder.py
modules/models/drl/: EXPERIMENTO_01.md
modules/pln/: .gitignore  requirements_pln.txt
modules/pln/data/: evaluation_results.json  llm_augmentation_prompt.md
modules/pln/src/: dataset.py  entity_extractor.py  evaluate.py  pln_module.py  plot_metrics.py  prepare_dataset.py  train.py
modules/robot_interface/: pybullet_robot.py  robot_interface.py
modules/robot_interface/urdf/: mobile_manipulator_pybullet.urdf
(+32 files in other folders)
